RESOLVED FIXED161251
Fix the !ENABLE(WEB_SOCKETS) build
https://bugs.webkit.org/show_bug.cgi?id=161251
Summary Fix the !ENABLE(WEB_SOCKETS) build
Csaba Osztrogonác
Reported 2016-08-26 09:17:49 PDT
../../Source/WebCore/inspector/InspectorOverlay.cpp: In member function 'WebCore::Page* WebCore::InspectorOverlay::overlayPage()': ../../Source/WebCore/inspector/InspectorOverlay.cpp:867:77: error: 'create' is not a member of 'WebCore::SocketProvider'
Attachments
Patch (1.28 KB, patch)
2016-08-26 09:49 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-08-26 09:49:54 PDT
WebKit Commit Bot
Comment 2 2016-08-26 11:02:15 PDT
Comment on attachment 287114 [details] Patch Clearing flags on attachment: 287114 Committed r205029: <http://trac.webkit.org/changeset/205029>
WebKit Commit Bot
Comment 3 2016-08-26 11:02:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.