Fix the !ENABLE(WEB_SOCKETS) build https://bugs.webkit.org/show_bug.cgi?id=161251

Reviewed by Alex Christensen.

* page/SocketProvider.h:


Canonical link: https://commits.webkit.org/179405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205029 268f45cc-cd09-0410-ab3c-d52691b4dbfc