Source/WebCore/page/SocketProvider.h
@@ -37,8 +37,8 @@ class URL;
 
 class WEBCORE_EXPORT SocketProvider : public ThreadSafeRefCounted<SocketProvider> {
 public:
-#if ENABLE(WEB_SOCKETS)
     static Ref<SocketProvider> create() { return adoptRef(*new SocketProvider); }
+#if ENABLE(WEB_SOCKETS)
     virtual Ref<SocketStreamHandle> createSocketStreamHandle(const URL&, SocketStreamHandleClient&, SessionID);
 #endif
     virtual ~SocketProvider() { };
